--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+ body{
+     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
 canvas{
     width: 80%;
     height: 80%;
